# rrelayer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IDEAS.md  LICENSE  LOCAL-SETUP.md  Makefile  README.md  TIMELINE.md  TODO.md  docker-compose.yml  funding.json
cli/: Cargo.toml  README.md
crates/cli/: Cargo.toml  Makefile  README.md
crates/cli/src/: authentication.rs  cli_interface.rs  console.rs  credentials.rs  error.rs  main.rs  project_location.rs
crates/cli/src/commands/: allowlist.rs  api_key.rs  auth.rs  balance.rs  clone.rs  config.rs  create.rs  error.rs  init.rs  keystore.rs  list.rs  mod.rs  network.rs  new.rs  sign.rs  start.rs  stop.rs  tx.rs  user.rs
crates/core/: Cargo.toml  README.md  build.rs  setup-playground.yaml
crates/core/src/: app_state.rs  docker.rs  environment.rs  file.rs  lib.rs  logger.rs  postgres.rs  safe_proxy.rs  shutdown.rs  startup.rs  yaml.rs
crates/core/src/authentication/: auth_middleware.rs  basic_auth.rs  cache.rs  jwt.rs  mod.rs
crates/core/src/background_tasks/: automatic_top_up_task.rs  balance_monitor.rs  cron_job_task.rs  mod.rs  network_cache_task.rs  user_rate_limit_cleanup_task.rs  webhook_manager_task.rs
crates/core/src/gas/: blob_gas_oracle.rs  gas_oracle.rs  mod.rs
crates/core/src/middleware/: authenticated.rs
crates/core/src/network/: cache.rs  mod.rs
crates/core/src/provider/: evm_provider.rs  layer_extensions.rs  mod.rs  wallet_manager.rs
crates/core/src/rate_limiting/: detection.rs  mod.rs  rate_limiter.rs  types.rs  utils.rs
crates/core/src/relayer/: cache.rs  get_relayer.rs  is_relayer_api_key.rs  mod.rs  queue_utils.rs
crates/core/src/schema/: mod.rs  v1_0_0.rs  v1_0_1.rs  v1_0_2.rs  v1_0_3.rs  v1_0_4.rs
crates/core/src/server/: build_info.rs  mod.rs
crates/core/src/setup/: mod.rs  yaml.rs
crates/core/src/shared/: cache.rs  from_param.rs  http_errors.rs  mod.rs  serializers.rs  utils.rs
crates/core/src/signing/: mod.rs
crates/core/src/transaction/: cache.rs  get_transaction.rs  nonce_manager.rs
crates/core/src/user/: mod.rs
crates/core/src/user_rate_limiting/: mod.rs  user_detection.rs  user_rate_limiter.rs
crates/core/src/wallet/: aws_kms_wallet_manager.rs  composite_wallet_manager.rs  fireblocks_wallet_manager.rs  mnemonic_wallet_manager.rs  mod.rs  pkcs11_wallet_manager.rs  private_key_wallet_manager.rs  privy_wallet_manager.rs  turnkey_wallet_manager.rs
crates/core/src/webhooks/: low_balance_payload.rs  manager.rs  mod.rs  payload.rs  sender.rs  types.rs
crates/e2e-tests/: .env.example  Cargo.toml  Makefile  QUICK_START.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  rrelayer.yaml  run-tests.sh  verify-setup.sh
crates/e2e-tests/.github/workflows/: e2e.yml
crates/e2e-tests/config/: aws_kms.yaml  aws_secret_manager.yaml  fireblocks.yaml  gcp_secret_manager.yaml  pkcs11.yaml  privy.yaml  raw.yaml  turnkey.yaml
crates/e2e-tests/contracts/: .gitignore  README.md  foundry.toml
crates/e2e-tests/contracts/script/: DeployMyCustomToken.s.sol  DeploySafe.s.sol
crates/e2e-tests/contracts/src/: SafeDeployment.sol  TestToken.sol
crates/e2e-tests/src/: anvil_manager.rs  config_manager.rs  contract_interactions.rs  embedded_rrelayer.rs  main.rs  relayer_client.rs  rrelayer_manager.rs  test_config.rs  test_scenarios.rs  webhook_server.rs
crates/e2e-tests/src/client/: mod.rs  relayer_client.rs
crates/e2e-tests/src/infrastructure/: anvil_manager.rs  contract_interactions.rs  embedded_rrelayer.rs  mod.rs  rrelayer_manager.rs  webhook_server.rs
crates/e2e-tests/src/tests/: mod.rs  registry.rs  test_runner.rs  test_suite.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: basic_auth_example.rs
crates/sdk/src/: alloy_integration.rs  clients.rs  lib.rs  types.rs
crates/sdk/src/api/: http.rs  mod.rs  types.rs
playground/rust-sdk-playground/: Cargo.toml
playground/rust-sdk-playground/examples/: complete_alloy_integration.rs  contract_interaction_via_relayer.rs  sign_message_via_relayer.rs  transfer_eth_via_relayer.rs
playground/rust-sdk-playground/src/: config.rs  lib.rs  main.rs  rate_limit.rs
playground/rust-sdk-playground/src/client/: get_admin_relayer.rs  get_client.rs  get_relayer.rs  mod.rs
playground/rust-sdk-playground/src/networks/: get_gas_prices.rs  get_network.rs  get_networks.rs  mod.rs
playground/rust-sdk-playground/src/relayer/: clone_relayer.rs  create_relayer.rs  delete_relayer.rs  disable_eip_1559_status.rs  enable_eip_1559_status.rs  get_relayers.rs  mod.rs  pause_relayer.rs  remove_max_gas_price.rs  unpause_relayer.rs  update_max_gas_price.rs
playground/rust-sdk-playground/src/signing/: mod.rs
playground/rust-sdk-playground/src/transaction/: mod.rs
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/src/__PLAYGROUND__/: helper.py
sdk/python/src/rrelayer/: __init__.py  admin.py  api.py  client.py  relayer.py  types.py
server/: Cargo.toml  setup-playground.yaml
server/schema/: V1.0.0__start.sql
server/src/: app_state.rs  main.rs  startup.rs
server/src/authentication/: cache.rs  mod.rs
server/src/authentication/guards/: auth_guards.rs  mod.rs
server/src/authentication/types/: jwt_claims.rs  jwt_role.rs  jwt_token.rs  mod.rs
server/src/gas/: mod.rs
server/src/gas/api/: mod.rs
server/src/gas/fee_estimator/: base.rs  custom.rs  fallback.rs  infura.rs  mod.rs  tenderly.rs
server/src/gas/types/: gas_limit.rs  gas_price.rs  gas_provider.rs  max_fee.rs  max_priority_fee.rs  mod.rs
server/src/middleware/: authenticated.rs
server/src/network/: cache.rs
server/src/network/api/: mod.rs
server/src/network/db/: read.rs  write.rs
server/src/network/types/: chain.rs  chain_id.rs  mod.rs  network.rs  networks_filter_state.rs
server/src/provider/: evm_provider.rs  mod.rs  wallet_manager.rs
server/src/relayer/: cache.rs  get_relayer.rs
server/src/relayer/api/: sign.rs
server/src/setup/: mod.rs
server/src/shared/: cache.rs  from_sql.rs  mod.rs  serializers.rs  to_sql.rs  utils.rs
server/src/transaction/: cache.rs  mod.rs  nonce_manager.rs
server/src/user/: mod.rs
(+729 files in other folders)
