[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/sdk",
    "crates/e2e-tests",
    "playground/rust-sdk-playground",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
alloy = { version = "1.1.36", features = ["full", "signer-mnemonic", "signer-keystore", "eips", "eip712"] }
alloy-rlp = "0.3.12"
alloy-eips = "1.0.36"

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
