[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/sdk",
    "crates/e2e-tests",
    "playground/rust-sdk-playground",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
alloy = { version = "1.7", features = ["full", "signer-mnemonic", "signer-keystore", "eips", "eip712"] }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
