[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# internal dependencies
rrelayerr_server = { path = "../server" }

# external dependencies
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.5.4"
colored = "2.0"
tokio = "1.35.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# build
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
