[package]
name = "rrelayerr_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# internal dependencies
rrelayerr_core = { path = "../core" }
rrelayerr_sdk = { path = "../sdk" }

# external dependencies
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11"
regex = "1.5.4"
colored = "2.0"
tokio = "1.35.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }

# build
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
serde_yaml = "0.9.34+deprecated"
hex = "0.4.3"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
