[package]
name = "rrelayer_cli"
version = "0.9.2"
edition = "2024"

[dependencies]
# internal dependencies
rrelayer_core = { path = "../core" }
rrelayer = { path = "../sdk" }

# external dependencies
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12"
regex = "1.12.2"
colored = "3.0"
tokio = "1.49.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0"
prettytable = "0.10.0"
chrono = "0.4.43"
hex = "0.4.3"
rpassword = "7.4"

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }

# build
tikv-jemalloc-ctl = { version = "0.6.1", optional = true }
tikv-jemallocator = { version = "0.6.1", optional = true }
rand = "0.9.2"

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
