[package]
name = "rrelayerr_core"
version = "0.1.0"
resolver = "2"
edition = "2021"

include = ["src/**", "Cargo.toml"]

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.30"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
aws-sdk-secretsmanager = "1.14.0"
aws-config = "1.1.4"
async-recursion = "1.0.5"
base64 = "0.22.0"
chrono = "0.4.19"
bytes = "1.5.0"
regex = "1.5.4"
thiserror = "1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
jsonwebtoken = "9.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
once_cell = "1.20.2"
native-tls = "0.2.12"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
postgres-native-tls = "0.5"
eth-keystore = "0.5.0"
hex = "0.4.3"
anyhow = "1.0.98"
dirs = "6.0.0"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
