[package]
name = "rrelayer_core"
version = "0.9.2"
resolver = "2"
edition = "2021"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "Core types and functionality for rrelayer - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer_core"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../LICENSE"
]

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "signer-aws", "json-rpc"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
uuid = { version = "1.19", features = ["v4", "serde"] }
rand = "0.9"
aws-sdk-secretsmanager = "1.97.0"
aws-sdk-kms = "1.97.0"
aws-sdk-sts = "1.95.0"
aws-config = "1.8.12"
base64 = "0.22.1"
chrono = "0.4.43"
bytes = "1.11.0"
regex = "1.12.2"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
once_cell = "1.21.3"
native-tls = "0.2.14"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
postgres-native-tls = "0.5"
hex = "0.4.3"
anyhow = "1.0.100"
rust_decimal = { version = "1.40.0", features = ["db-tokio-postgres"] }
google-secretmanager1 = "7.0"
hyper = "1.8"
hyper-rustls = "0.27"
rustls = { version = "0.23.36", features = ["ring"]}
hmac = "0.12"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
tower = "0.5.3"
subtle = "2.6.1"
cryptoki = "0.11"
secrecy = "0.10"
jsonwebtoken = "10.2"
rsa = "0.9"
