[package]
name = "rrelayer_core"
version = "0.11.6"
resolver = "2"
edition = "2021"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "Core types and functionality for rrelayer - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer_core"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../LICENSE"
]

[dependencies]
tokio-postgres = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "signer-aws", "json-rpc"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = { workspace = true }
rand_core = "0.6"
aws-sdk-secretsmanager = "1.14.0"
aws-sdk-kms = "1.14.0"
aws-sdk-sts = "1.14.0"
aws-config = "1.1.4"
base64 = { workspace = true }
chrono = { workspace = true }
bytes = "1.5.0"
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "time"] }
once_cell = "1.20.2"
native-tls = "0.2.12"
bb8 = "0.9"
bb8-postgres = "0.9"
postgres-native-tls = "0.5"
hex = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
google-secretmanager1 = { version = "7.0", features = ["yup-oauth2-service-account"] }
yup-oauth2 = { version = "12", default-features = false, features = ["service-account", "hyper-rustls", "ring"] }
hyper = "1.8"
hyper-rustls = "0.27"
rustls = { version = "0.23.35", features = ["ring"]}
hmac = { workspace = true }
sha2 = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
tower = "0.5.2"
subtle = "2.6.1"
cryptoki = "0.12"
secrecy = "0.10"
jsonwebtoken = "10"
rsa = "0.9"