[package]
name = "rrelayer_e2e_tests"
version = "0.1.0"
resolver = "2"
edition = "2021"

[[bin]]
name = "e2e-runner"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "signer-aws"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Database client for schema reset
tokio-postgres = "0.7"

# Test framework
assert_matches = "1.5"

# Core rrelayer dependencies
rrelayer_core = { path = "../core" }
rrelayer = { path = "../sdk" }

# Process management for Anvil
# tokio-process = "0.2"  # Not needed, using tokio::process

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"

# Temporary files
tempfile = "3.24"
# Simple HTTP server for gas API
warp = "0.4"
rand = "0.9.2"

# Webhook testing dependencies
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
