[package]
name = "rrelayer_e2e_tests"
version = "0.1.0"
resolver = "2"
edition = "2021"

[[bin]]
name = "e2e-runner"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "signer-aws"] }

# HTTP client
reqwest = { workspace = true }

# Database client for schema reset
tokio-postgres = { workspace = true }

# Test framework
assert_matches = "1.5"

# Core rrelayer dependencies
rrelayer_core = { path = "../core" }
rrelayer = { path = "../sdk" }

# Time utilities
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
futures = "0.3"

# Temporary files
tempfile = "3.8"
# Simple HTTP server for gas API
warp = "0.3"
rand = { workspace = true }

# Webhook testing dependencies
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]