[package]
name = "rust-sdk-playground"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name = "main"
# path = "src/main.rs"

[lib]
name = "rust_sdk_playground"
path = "src/lib.rs"

[dependencies]
rrelayer = { path = "../../crates/sdk" }
eyre = "0.6"
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712"] }
hex = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = "0.3"