[project]
name = "rrelayer"
version = "0.1.0"
description = "The rrelayer sdk"
readme = "README.md"
authors = [
    { name = "parizval", email = "anmolgoyal@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "web3>=7.14.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
